src/components/Pagination/styles.module.scss
.pagination {
  float: right;
  font-family: "Roboto";
  font-style: normal;
  font-weight: 700;
  font-size: 14px;
  line-height: 16px;
  margin-top: 55px;
  button {
    color: var(--gray);
  }

  .page {
    background: var(--white);
    border: 1px solid var(--gray);
    border-radius: 4px;
    padding: 4px 11px 4px 8px;
    text-align: center;
    margin: 0px 5px;

    &:hover {
      background-color: var(--dark-blue);
      color: var(--white);
    }
  }
  .active {
    background-color: var(--dark-blue);
    color: var(--white);
  }
  .navButton {
    background: var(--white);
    border: 1px solid var(--gray);
    border-radius: 4px;
    padding: 4px 10px 4px 15px;
  }
}

